Réalisation de tests

--- a/front/tsconfig.spec.json
+++ b/front/tsconfig.spec.json
@@ -1,14 +1,22 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
-  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
+    "target": "es2020",
+    "module": "es2020",
+    "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "types": [
-      "jasmine"
+      "jest",
+      "node",
+      "jest"
     ]
   },
   "include": [
+    "src/**/*.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
