--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -29,5 +29,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/polyfills.ts"
+  ]
 }
